fixed scrollbar

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -336,6 +336,8 @@
         flex-grow: 1;
         border: none;
         resize: none;
+        scrollbar-width: thin;
+        scrollbar-color: #3378ff #e0e0e0;
 
         &:focus {
             outline: none;
